--- a/book/lecture-1/exercise-1.2.ipynb
+++ b/book/lecture-1/exercise-1.2.ipynb
@@ -4,23 +4,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Exercise 1.1\n",
-    "-"
+    "(ref:lec1:ex2)=\n",
+    "# Exercise 1.2"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Text of the exercise here"
+    "```{figure} res/ex2.png\n",
+    ":align: center\n",
+    "\n",
+    "Schematic of the motor with a load (courtesy of [*Exercise Manual for Automatic Control*](https://uppsala.instructure.com/courses/102131/files/7991063?module_item_id=1296223))\n",
+    "```"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Assume that the DC-motor in {ref}`ref:lec1:ex1` is running a load attached to an elastic axis, as in the figure above.\n",
+    "Let $k$ be the axis' spring constant, and let $J_L$ be the moment of inertia of the load.\n",
+    "\n",
+    "1. Write the transfer function between the input voltage $u$ and the angle $\\theta_L$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----"
+   ]
   }
  ],
  "metadata": {
