--- a/book/lecture-1/exercise-1.3.ipynb
+++ b/book/lecture-1/exercise-1.3.ipynb
@@ -4,23 +4,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Exercise 1.1\n",
-    "-"
+    "# Exercise 1.3"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Text of the exercise here"
+    "Assume that the DC motor described in {ref}`ref:lec1:ex2` is controlled by a **Proportional (P)** controller.\n",
+    "\n",
+    "1. Sketch the block diagram of the control system. Determine how the poles of the closed-loop depend on the proportional gain $K$, and discuss what this means for the behavior of the closed-loop.\n",
+    "2. Consider two reference signals, a step $\\theta_{ref}(t) = \\textrm{step}(t)$ and a ramp $\\theta_{ref}(t) = \\textrm{ramp}(t)$. What is the steady-state controll error (or output tracking error) in these two cases?\n",
+    "3. Consider now a **Proportional Integral (PI)** controller. What will the steady-state error be if the reference signal is a ramp?"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---"
+   ]
   }
  ],
  "metadata": {
