--- a/book/lecture-1/exercise-1.4.ipynb
+++ b/book/lecture-1/exercise-1.4.ipynb
@@ -38,6 +38,22 @@
    "source": [
     "---"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{dcases}\n",
+    "x \\\\ y\n",
+    "\\end{dcases}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
