--- a/book/lecture-1/exercise-1.4.ipynb
+++ b/book/lecture-1/exercise-1.4.ipynb
@@ -43,17 +43,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\n",
-    "\\begin{dcases}\n",
-    "x \\\\ y\n",
-    "\\end{dcases}\n",
-    "$$"
+    "*Solutions to be uploaded*"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
