--- a/book/lecture-1/exercise-1.5.ipynb
+++ b/book/lecture-1/exercise-1.5.ipynb
@@ -36,6 +36,13 @@
    "source": [
     "---"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Solution to be uploaded*"
+   ]
   }
  ],
  "metadata": {
