--- a/book/lecture-2/exercise-2.2.ipynb
+++ b/book/lecture-2/exercise-2.2.ipynb
@@ -18,16 +18,15 @@
     "G(s) = \\frac{10}{s(s+10)}\n",
     "$$\n",
     "\n",
-    "We adopt a proportional controller with a low-pass filter. The controller's transfer function is\n",
+    "We adopt a proportional controller:\n",
     "\n",
     "$$\n",
-    "F(s) = \\frac{K}{1+sT},\n",
+    "F(s) = K\n",
     "$$\n",
     "\n",
-    "where $K > 0$ is the proportional gain and $T > 0$ is the time constant of the low-pass filter. The controller is fed with the tracking error, $e(t) = \\theta_{ref}(t) - \\theta(t)$.\n",
     "\n",
     "1. For which values of $K$ is the closed-loop stable?\n",
-    "2. What happens if $T$ is very small or very large, respectively?"
+    "2. If the reference signal is $\\theta_{ref}(t) = R \\cdot \\textrm{step}(t)$, for what values of $K$ the steady-state output error is less than $1\\%$?"
    ]
   },
   {
