Fixed problems with root locus not being interactive. Fixed compatibility problems.

--- a/book/lecture-2/res/tikz.ipynb
+++ b/book/lecture-2/res/tikz.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -19,25 +19,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The jupyter_tikz extension is already loaded. To reload it, use:\n",
-      "  %reload_ext jupyter_tikz\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext jupyter_tikz"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "latex"
@@ -166,13 +157,13 @@
        "<IPython.core.display.SVG object>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%%tikz -l positioning,calc,arrows -sp=ex3.pdf\n",
+    "%%tikz -l positioning,calc,arrows --save-image=ex3.svg\n",
     "\\begin{tikzpicture}[auto, node distance=2cm,>=latex']\n",
     "\n",
     "\t\\tikzstyle{block} = [draw, fill=white, rectangle, minimum height=3em, minimum width=6em]\n",
