--- a/book/lecture-3/exercise-3.2.ipynb
+++ b/book/lecture-3/exercise-3.2.ipynb
@@ -58,13 +58,13 @@
     "\n",
     "Then, we sort poles and zeros by increasing frequencies, and we apply the rules to sketch asymptotic bode diagrams\n",
     "\n",
-    "| Frequency         |       What happens to the modulus plot             |       What happens to the phase plot                    |   \n",
-    "|-------------------|----------------------------------------------------|---------------------------------------------------------|\n",
-    "| $0$ rad/s  (pole) | The initial slope is $-2$ ($-40 \\text{ dB/dec}$)   | The initial phase is $-180^\\circ$                       |\n",
-    "| $4$ rad/s  (pole) | The slope decreases from $-2$ to $-3$              | The phase decreases by $90^\\circ$ ($-270^\\circ$)        |\n",
-    "| $5$ rad/s  (pole) | The slope decreases from $-3$ to $-4$              | The phase decreases by $90^\\circ$ ($-360^\\circ$)        |\n",
-    "| $8$ rad/s  (zero) | The slope increases from $-4$ to $-3$              | The phase increases by $90^\\circ$ ($-270^\\circ$)        |\n",
-    "| $10$ rad/s  (pole)| The slope decreases from $-3$ to $-4$              | The phase decreases by $90^\\circ$ ($-360^\\circ$)        |\n",
+    "| Frequency         |       What happens to the modulus plot             |       What happens to the phase plot       |   \n",
+    "|-------------------|----------------------------------------------------|--------------------------------------------|\n",
+    "| $0$ rad/s  (pole) | The initial slope is $-2$ ($-40 \\text{ dB/dec}$)   | The initial phase is $-180^\\circ$          |\n",
+    "| $4$ rad/s  (pole) | The slope decreases from $-2$ to $-3$              | The phase decreases by $90^\\circ$          |\n",
+    "| $5$ rad/s  (pole) | The slope decreases from $-3$ to $-4$              | The phase decreases by $90^\\circ$          |\n",
+    "| $8$ rad/s  (zero) | The slope increases from $-4$ to $-3$              | The phase increases by $90^\\circ$          |\n",
+    "| $10$ rad/s  (pole)| The slope decreases from $-3$ to $-4$              | The phase decreases by $90^\\circ$          |\n",
     "\n",
     "\n",
     "\n"
@@ -172,10 +172,10 @@
     "\n",
     "| Frequency                   |       What happens to the modulus plot                         |       What happens to the phase plot                    |   \n",
     "|-----------------------------|----------------------------------------------------------------|---------------------------------------------------------|\n",
-    "| $0$ rad/s                   |  The magnitude plot starts flat (slope is $0$) at $6 \\text{dB}  | The initial phase is $0^\\circ$                          |\n",
+    "| $0$ rad/s                   | The magnitude plot starts flat (slope is $0$) at $6 \\text{ dB}$ | The initial phase is $0^\\circ$                          |\n",
     "| $0.1$ rad/s (pole)          | The slope decreases from $0$ to $-1$                           | The phase decreases by $90^\\circ$                       |\n",
-    "| $0.4$ rad/s (pole)          | The slope decreases from $-1$ to $-2$                          | The phase decreases by $90^\\circ$ ($-180^\\circ$)        |\n",
-    "| $2$ rad/s (complex poles)   | The slope decreases from $-2$ to $-4$                          | The phase decreases by $180^\\circ$ ($-360^\\circ$)       |"
+    "| $0.4$ rad/s (pole)          | The slope decreases from $-1$ to $-2$                          | The phase decreases by $90^\\circ$                       |\n",
+    "| $2$ rad/s (complex poles)   | The slope decreases from $-2$ to $-4$                          | The phase decreases by $180^\\circ$                      |"
    ]
   },
   {
