Fix missing end of equation

--- a/book/lecture-3/exercise-3.2.ipynb
+++ b/book/lecture-3/exercise-3.2.ipynb
@@ -80,7 +80,9 @@
     "\n",
     "In our case, the slowest pole (save for $s=0$) is in $4$ rad/s, hence we compute $\\lvert G(i 0.04) \\lvert_{\\text{dB}}$.\n",
     "\n",
-    "$$\\lvert G(i 0.04) \\lvert = \\frac{100 \\cdot \\lvert i 0.04 + 8 \\lvert}{\\lvert i 0.04 \\lvert^2 \\cdot \\lvert i 0.04 + 4 \\lvert \\cdot \\lvert i 0.04 + 5 \\lvert \\cdot \\lvert i 0.04 + 10 \\lvert} "
+    "$$\n",
+    "\\lvert G(i 0.04) \\lvert = \\frac{100 \\cdot \\lvert i 0.04 + 8 \\lvert}{\\lvert i 0.04 \\lvert^2 \\cdot \\lvert i 0.04 + 4 \\lvert \\cdot \\lvert i 0.04 + 5 \\lvert \\cdot \\lvert i 0.04 + 10 \\lvert} \n",
+    "$$"
    ]
   },
   {
