Add custom functions to path when building the mybinder environment

--- a/book/lecture-3/exercise-3.3.ipynb
+++ b/book/lecture-3/exercise-3.3.ipynb
@@ -55,7 +55,7 @@
     "    graphics_toolkit(t);\n",
     "end\n",
     "\n",
-    "if ~exist('asymptotic_bode.m', 'file')\n",
+    "if ~exist('asymptotic_bode')\n",
     "    websave('asymptotic_bode.m', 'https://raw.githubusercontent.com/bonassifabio/1RT485/refs/heads/main/book/res/asymptotic_bode.m');\n",
     "end\n",
     "\n",
