--- a/book/lecture-3/exercise-3.3.ipynb
+++ b/book/lecture-3/exercise-3.3.ipynb
@@ -21,7 +21,7 @@
     "We need to design a controller that regulates the speed of the vehicle.\n",
     "\n",
     "1. Start by designing a proportional controller $F(s) = K$. For what values of $K$ is the closed-loop stable? How does the closed-loop performance change when $K$ is changed?\n",
-    "2. Consider now $K=10$. Compute the **gain margin** $g_m$ and the **phase margin** $\\varphi_m$.\n",
+    "2. Consider now $K=10$. Compute the **gain margin** $A_m$ and the **phase margin** $\\varphi_m$.\n",
     "\n",
     "---"
    ]
