--- a/book/lecture-3/exercise-3.3.ipynb
+++ b/book/lecture-3/exercise-3.3.ipynb
@@ -244,11 +244,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "While a phase margin of $11^\\circ$ is bigger than $0$, so it is enough to guarantee the closed-loop stability, in practical applications it is too low to be accepted. \n",
+    "While a phase margin of $11^\\circ$ is bigger than $0^\\circ$, so it is enough to guarantee the closed-loop stability, in practical applications it is too low to be accepted. \n",
     "\n",
     "- If $\\varphi_m > 90^\\circ$, the **dominant closed-loop pole** is real valued and stable.\n",
-    "- If $0 < \\varphi_m < 90$, the **dominant closed-loop poles** are complex-conjugate, with damping coefficient $\\xi = \\cos(\\varphi_m)$.\n",
-    "- If $\\varphi_m \\leq 0$, the system is unstable."
+    "- If $0^\\circ < \\varphi_m < 90^\\circ$, the **dominant closed-loop poles** are complex-conjugate, with damping coefficient $\\xi = \\cos(\\varphi_m)$.\n",
+    "- If $\\varphi_m \\leq 0^\\circ$, the system is unstable."
    ]
   },
   {
@@ -281,7 +281,7 @@
     "Here $\\omega_p$ is the phase crossover frequency, i.e., the frequency at which the phase plot first crosses the $-180^\\circ$ axis. To find $\\omega_p$ we need to solve\n",
     "\n",
     "$$\n",
-    "\\angle G_o(i \\omega) := \\varphi(0) - \\sum_{i} \\textrm{atan} \\left( \\frac{\\omega}{p_i} \\right) +  - \\sum_{i} \\textrm{atan} \\left( \\frac{\\omega}{z_i} \\right) = -180^\\circ\n",
+    "\\angle G_o(i \\omega) := \\varphi(0) + \\sum_{i} \\textrm{atan} \\left( \\frac{\\omega}{p_i} \\right) - \\sum_{i} \\textrm{atan} \\left( \\frac{\\omega}{z_i} \\right) = -180^\\circ\n",
     "$$ (eq:lec3:ex3:phase)\n",
     "\n",
     "The initial phase $\\varphi(0)$ is $0^\\circ$  if the static gain is positive, decremented by $90^\\circ$ for each pole in the origin and incremented by $90^\\circ$ for each zero in the origin.\n",
