Added text of Exercise Session 4

--- a/book/lecture-4/exercise-4.2.ipynb
+++ b/book/lecture-4/exercise-4.2.ipynb
@@ -4,18 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(ref:lec4:ex4)=\n",
-    "# Exercise 4.4"
+    "(ref:lec4:ex2)=\n",
+    "# Exercise 4.2"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{figure} res/ex4.svg\n",
+    "```{figure} res/ex2.svg\n",
     "---\n",
     "height: 200\n",
-    "name: fig:lec4:ex4:car\n",
+    "name: fig:lec4:ex2:car\n",
     "---\n",
     "Block diagram of the electric car\n",
     "```"
@@ -31,12 +31,28 @@
     "\n",
     "**Mechanical Dynamics** (Current $\\to$ Speed): $G_1(s) = \\frac{5}{s + 0.2}$\n",
     "\n",
-    "The block diagram of the car is shown in {numref}`fig:lec4:ex4:car`. Both the motor current and the car velocity are measured, respectively with an [Hall-effect sensor](https://en.wikipedia.org/wiki/Hall_effect_sensor) and a [speedometer](https://en.wikipedia.org/wiki/Speedometer).\n",
+    "The block diagram of the car is shown in {numref}`fig:lec4:ex2:car`. Both the motor current and the car velocity are measured, respectively with an [Hall-effect sensor](https://en.wikipedia.org/wiki/Hall_effect_sensor) and a [speedometer](https://en.wikipedia.org/wiki/Speedometer).\n",
     "   \n",
     "1. Sketch the block diagram of the system when a cascade control scheme is used. What are the control variable, the  *intermediate signal* that is fed back in the internal loop, and the output?\n",
-    "2. We start designing the cascade control scheme by the inner controller. Assume that we use a proportional controller $F_i(s) = K_2$. Design $K_2$ so that the bandwidth of the inner loop is at least $25 {rad/s}$ and the steady-state error of this internal loop is no larger than $1\\%$.\n",
-    "3. We now design the controller for the outer loop as a proportional controller $F(s) = K_1$. Choose $K_1$ so that the bandwidth of the closed-loop is at least $1 rad/s$.\n",
+    "2. We start designing the cascade control scheme by the inner controller. Assume that we use a proportional controller $F_i(s) = K_2$. Design $K_2$ so that the bandwidth of the inner loop is at least $25$ rad/s and the steady-state error of this internal loop is no larger than $1\\%$.\n",
+    "3. We now design the controller for the outer loop as a proportional controller $F(s) = K_1$. Choose $K_1$ so that the bandwidth of the closed-loop is at least $1$ rad/s.\n",
     "4. Compute the steady-state output tracking error of the closed-loop. How can you modify the scheme so that the steady-state error is exactly zero?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Solution\n",
+    "\n",
+    "*To be uploaded*"
    ]
   },
   {
