--- a/book/lecture-4/exercise-4.2.ipynb
+++ b/book/lecture-4/exercise-4.2.ipynb
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
    ],
    "source": [
     "if exist('stepinfo')\n",
-    "    disp('Step response information: '); disp(stepinfo(G_c2))\n",
+    "    disp('Step response information: '); disp(stepinfo(Gc_new))\n",
     "end"
    ]
   }
