Clarified Lecture 1 material

--- a/book/lecture-1/exercise-1.2.ipynb
+++ b/book/lecture-1/exercise-1.2.ipynb
@@ -33,6 +33,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```{admonition} Hint\n",
+    ":class: dropdown\n",
+    "To retrieve the governing equations, you can write the balance of momentum of both the load:\n",
+    "\n",
+    "$$\n",
+    "J_L \\ddot{\\theta}_L = - f_L \\dot{\\theta}_L - k (\\theta_L - \\theta_m)\n",
+    "$$\n",
+    "\n",
+    "where, $J_L \\ddot{\\theta}_L$ is the motor inertia equaling the sum of the friction ($-f_L \\dot{\\theta}_L$) and of the elastic force $ k (\\theta_L - \\theta_m)$, and of the motor\n",
+    "\n",
+    "$$\n",
+    "J_m \\ddot{\\theta}_m = -f_m \\dot{\\theta}_m + k (\\theta_L - \\theta_m) + k_a i\n",
+    "$$\n",
+    "\n",
+    "where the motor inertia ($J_m \\ddot{\\theta}_m$) equals the sum of the friction term ($-f_m \\dot{\\theta}_m$), the elastic force ($ k (\\theta_L - \\theta_m)$), and the motor torque ($k_a i$).\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "----"
    ]
   },
@@ -47,21 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Writing the momentum balance of the load and of the motor we get, respectively\n",
-    "\n",
-    "$$\n",
-    "\\begin{aligned}\n",
-    "J_L \\ddot{\\theta}_L =& - f_L \\dot{\\theta}_L - k (\\theta_L - \\theta_m) \\\\\n",
-    "J_m \\ddot{\\theta}_m =& -f_m \\dot{\\theta}_m + k (\\theta_L - \\theta_m) + k_a i\n",
-    "\\end{aligned}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Moving to the Laplace domain,\n",
+    "To solve the system's ODE in the Laplace domain, we replace the time derivative $\\frac{d}{dt}$ with the Laplace operator $s$:\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -81,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Replacing it back into the first equation, we get"
+    "Replacing $\\Theta_m(s)$ into the first equation, we get"
    ]
   },
   {
