--- a/book/lecture-1/exercise-1.5.ipynb
+++ b/book/lecture-1/exercise-1.5.ipynb
@@ -52,15 +52,11 @@
    "name": "jupyter_matlab_kernel"
   },
   "language_info": {
-   "codemirror_mode": "octave",
    "file_extension": ".m",
-   "mimetype": "text/x-octave",
-   "name": "matlab",
-   "nbconvert_exporter": "",
-   "pygments_lexer": "octave",
-   "version": "8.4.0"
+   "mimetype": "text/x-matlab",
+   "name": "matlab"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
