--- a/book/lecture-2/exercise-2.1.ipynb
+++ b/book/lecture-2/exercise-2.1.ipynb
@@ -5,7 +5,9 @@
    "metadata": {},
    "source": [
     "(ref:lec2:ex1)=\n",
-    "# Exercise 2.1\n"
+    "# Exercise 2.1\n",
+    "\n",
+    "{ilo}`analysis_closed_loop`"
    ]
   },
   {
@@ -38,36 +40,10 @@
     "Closed-loop step responses\n",
     "```"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Solution"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Plot 1 corresponds to an over-damped closed-loop response, as no oscillation is visible. This implies that the closed-loop poles are real-valued. Looking at the {ref}`fig:lec2:ex1:rlocus`, the closed-loop eigenvalues are negative real-valued for $0 < K \\leq 0.2$.\n",
-    "- Plot 2 depicts an unstable and oscillatory closed-loop response, meaning that the closed-loop poles have a large imaginary part and a positive real part. From the {ref}`fig:lec2:ex1:rlocus` we can see that this is the case for $K > 11$.\n",
-    "- Plot 3 depicts a marginally stable closed-loop response, i.e., the closed-loop poles have null real part. Therefore, this case corresponds to $K = 11$.\n",
-    "- Plot 4 showns a stable, but oscillatory, closed-loop response. The  dominant closed-loop poles are complex conjugate. This case corresponds to $0.2 < K < 11$."
-   ]
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
-  }
+  "language_info": {}
  },
  "nbformat": 4,
  "nbformat_minor": 2
