--- a/book/lecture-2/exercise-2.1-solutions.ipynb
+++ b/book/lecture-2/exercise-2.1-solutions.ipynb
@@ -20,8 +20,8 @@
     "Root Locus plot\n",
     "```\n",
     "\n",
-    "We want to design a proportional controller for a tooling machine.\n",
-    "In the {ref}`fig:lec2:ex1:rlocus`, the poles of the closed-loop system are drawn as a function of the controller gain $K$. "
+    "We want to design a proportional controller $F(s)=K$ for a tooling machine.\n",
+    "In the {ref}`fig:lec2:ex1:rlocus`, the poles of the closed-loop system $G_c(s) = \\frac{F(s)G(s)}{1 + F(s)G(s)}$ are drawn as a function of the controller gain $K$. "
    ]
   },
   {
